Cloned the repository and installed the requirements

--- a/lab08-binderiya.ipynb
+++ b/lab08-binderiya.ipynb
@@ -8,7 +8,7 @@
         "title: \"Module 05: Lab 02\"\n",
         "subtitle: \"Regression Modeling on Employment Data\"\n",
         "author:\n",
-        "  - name: Norah Jones\n",
+        "  - name: Binderiya Dugersuren\n",
         "    affiliations:\n",
         "      - id: cmu\n",
         "        name: Carnegie Mellon University\n",
